--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
@@ -24,6 +25,7 @@
     "leaflet": "^1.9.2",
     "leaflet-geosearch": "^3.7.0",
     "mapbox-gl": "^2.11.0",
+    "mapbox-gl-controls": "^2.3.5",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
