--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/league-spartan": "^4.5.13",
+    "@fontsource/museomoderno": "^4.5.13",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/icons-material": "^5.3.1",
@@ -32,6 +34,7 @@
     "react-draggable": "^4.4.5",
     "react-google-autocomplete": "^2.7.0",
     "react-google-button": "^0.7.2",
+    "react-loading": "^2.0.3",
     "react-map-gl": "^7.0.19",
     "react-map-gl-geocoder": "^2.2.0",
     "react-mapbox-gl-geocoder": "^1.1.0",
