--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/league-spartan": "^4.5.13",
     "@fontsource/museomoderno": "^4.5.13",
+    "@fontsource/roboto": "^4.5.8",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/icons-material": "^5.3.1",
@@ -34,12 +35,14 @@
     "react-draggable": "^4.4.5",
     "react-google-autocomplete": "^2.7.0",
     "react-google-button": "^0.7.2",
+    "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
     "react-map-gl": "^7.0.19",
     "react-map-gl-geocoder": "^2.2.0",
     "react-mapbox-gl-geocoder": "^1.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "typeface-almarai": "^1.1.13",
