--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mapbox/mapbox-sdk": "^0.15.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@mui/styles": "^5.3.0",
@@ -27,9 +28,10 @@
     "framer-motion": "^4.1.17",
     "leaflet": "^1.9.2",
     "leaflet-geosearch": "^3.7.0",
-    "mapbox-gl": "^2.11.0",
+    "mapbox-gl": "^2.13.0",
     "mapbox-gl-controls": "^2.3.5",
     "moment": "^2.29.4",
+    "pusher-js": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
