--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^5.3.0",
     "@mui/x-data-grid": "^5.15.1",
     "@mui/x-date-pickers": "^5.0.8",
+    "@react-pdf/renderer": "^3.1.8",
     "@sweetalert2/themes": "^5.0.14",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -42,6 +43,7 @@
     "react-map-gl": "^7.0.19",
     "react-map-gl-geocoder": "^2.2.0",
     "react-mapbox-gl-geocoder": "^1.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-swipeable-views": "^0.14.0",
